# boltshell

./: Cargo.toml  LICENSE  README.md
src/: colors.rs  commands.rs  custom_commands.rs  executor.rs  main.rs  parser.rs  signals.rs  updater.rs
src/commands/: advanced_commands.rs  extra_commands.rs
