[package]
name = "boltshell"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Lightweight shell made purely in Rust"
repository = "https://github.com/usebolt/boltshell"
readme = "README.md"
keywords = ["shell", "rust", "boltshell"]
categories = ["development-tools", "command-line-interface"]

[dependencies]
ctrlc = "3.2"
whoami = "1.2"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
